unpackaged/main/default/objects/Asset/fields/Destroyed_date__c.field-meta.xml
<CustomField>
    <fullName>Destroyed_date__c</fullName>
    <description>Asset is physically or chemically obliterated, it can no longer be reuse.  Marks the definitive end of the asset’s life.</description>
    <inlineHelpText>Asset is physically or chemically obliterated, it can no longer be reuse</inlineHelpText>
    <label>Destroyed date</label>
    <type>Date</type>
</CustomField>