unpackaged/main/default/objects/Asset/fields/Last_Inventoried__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventoried__c</fullName>
    <label>Last Inventoried</label>
    <type>Date</type>
</CustomField>