unpackaged/main/default/objects/Asset/fields/LTSTag__c.field-meta.xml
<CustomField>
    <fullName>LTSTag__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>LTSTag</label>
    <type>AutoNumber</type>
</CustomField>