unpackaged/main/default/objects/Asset/fields/SIM__c.field-meta.xml
<CustomField>
    <fullName>SIM__c</fullName>
    <label>SIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>