unpackaged/main/default/objects/Asset/fields/SubSubCustMain__c.field-meta.xml
<CustomField>
    <fullName>SubSubCustMain__c</fullName>
    <label>SubSubCustMain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>ADVA</fullName>
            </value>
            <value>
                <fullName>AllStream</fullName>
            </value>
            <value>
                <fullName>Aviat</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Ciena</fullName>
            </value>
            <value>
                <fullName>COLT</fullName>
            </value>
            <value>
                <fullName>Commdex</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Infinera</fullName>
            </value>
            <value>
                <fullName>Ledcor Technical Services</fullName>
            </value>
            <value>
                <fullName>MDSI</fullName>
            </value>
            <value>
                <fullName>Pacific Carriage</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Rogers</fullName>
            </value>
            <value>
                <fullName>XO Communications</fullName>
            </value>
            <value>
                <fullName>Zayo Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>