unpackaged/main/default/objects/Asset/fields/SubSubCustomer__c.field-meta.xml
<CustomField>
    <fullName>SubSubCustomer__c</fullName>
    <label>SubSubCustomer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubSubCustMain__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic - Customer not in list</fullName>
            </value>
            <value>
                <fullName>Ledcor Technical Services - Generic</fullName>
            </value>
            <value>
                <fullName>Ciena - Ciena - Pooled</fullName>
            </value>
            <value>
                <fullName>Ciena - ABN AMRO - AT&amp;T Gold</fullName>
            </value>
            <value>
                <fullName>Ciena - ABOVENET</fullName>
            </value>
            <value>
                <fullName>Ciena - AG Edwards - AT&amp;T Gold</fullName>
            </value>
            <value>
                <fullName>Ciena - Alcatel Lucent Gold - AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Ciena - Alliance - AT&amp;T Gold</fullName>
            </value>
            <value>
                <fullName>Ciena - Allstream</fullName>
            </value>
            <value>
                <fullName>Ciena - Allstream New York City</fullName>
            </value>
            <value>
                <fullName>Ciena - Alverno Franciscan Alliance</fullName>
            </value>
            <value>
                <fullName>Ciena - Amazon</fullName>
            </value>
            <value>
                <fullName>Ciena - AMD AT&amp;T AMDOCS</fullName>
            </value>
            <value>
                <fullName>Ciena - AOL</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T - Costco</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T - Fresenius Medical</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T - Geico</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T - Palmetto</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T - Wellington Management</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Alcoa</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T BAE</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Capital One</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Conexus</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T DTTC</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Dunkin Brands</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Enterprise</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Fidelity</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T GOLD - Blue Cross - Blue Shield</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Gold - ICE</fullName>
            </value>
            <value>
                <fullName>Ciena - AT&amp;T Gold - Verizon Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>