unpackaged/main/default/objects/Asset/fields/Updated_Through_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Updated_Through_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Through Mobile</label>
    <type>Checkbox</type>
</CustomField>