unpackaged/main/default/objects/Asset/fields/Used_on_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>Used_on_WorkOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used on WorkOrder</label>
    <type>Checkbox</type>
</CustomField>