unpackaged/main/default/objects/Asset/validationRules/Asset_qty_cant_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_qty_cant_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Quantity)</errorConditionFormula>
    <errorMessage>Quantity can not be Blank. you must enter at least a 0 to create a new asset</errorMessage>
</ValidationRule>