unpackaged/main/default/objects/Asset/listViews/All_Infinera_Spares.listView-meta.xml
<ListView>
    <fullName>All_Infinera_Spares</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>Part_Number__c</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Used_on_WorkOrder__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Work_Order__c</columns>
    <columns>LTSTag__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Infinera</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Spares</value>
    </filters>
    <label>All Infinera Spares</label>
</ListView>