unpackaged/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>Part_Number__c</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Used_on_WorkOrder__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Work_Order__c</columns>
    <columns>SubSubCustomer__c</columns>
    <columns>SubSubCustMain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>