unpackaged/main/default/objects/Asset/listViews/Chicago_IL_Depot_Unit_842.listView-meta.xml
<ListView>
    <fullName>Chicago_IL_Depot_Unit_842</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Part_Number__c</columns>
    <columns>Last_Inventoried__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>LTSTag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Chicago,IL Depot</value>
    </filters>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Unit 842</value>
    </filters>
    <label>Chicago, IL Depot - Unit 842</label>
</ListView>