unpackaged/main/default/objects/Asset/listViews/Colt_Spares_Location_Metuchen.listView-meta.xml
<ListView>
    <fullName>Colt_Spares_Location_Metuchen</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Part_Number__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>LTSTag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Colt</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Spares</value>
    </filters>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Metuchen</value>
    </filters>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Unit 264</value>
    </filters>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Unit 69</value>
    </filters>
    <label>Colt - Spares - Location: Metuchen</label>
</ListView>