unpackaged/main/default/objects/Asset/listViews/Gander_NL_Spares.listView-meta.xml
<ListView>
    <fullName>Gander_NL_Spares</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>Part_Number__c</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Used_on_WorkOrder__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Work_Order__c</columns>
    <columns>LTSTag__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Gander</value>
    </filters>
    <label>Gander, NL - Spares</label>
</ListView>