unpackaged/main/default/objects/Asset/listViews/Indigo_Spares_Fiber.listView-meta.xml
<ListView>
    <fullName>Indigo_Spares_Fiber</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Part_Number__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Location</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>Shipment__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>LTSTag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Indigo Telecom Group</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Spares</value>
    </filters>
    <label>Indigo - Spares Fiber</label>
</ListView>